syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt

    7 ExtDecList: VarDec
    8           | VarDec COMMA ExtDecList

    9 Specifier: TYPE
   10          | StructSpecifier

   11 StructSpecifier: STRUCT OptTag LC DefList RC
   12                | STRUCT Tag

   13 OptTag: ID
   14       | %empty

   15 Tag: ID

   16 VarDec: ID
   17       | VarDec LB INT RB

   18 FunDec: ID LP VarList RP
   19       | ID LP RP

   20 VarList: ParamDec COMMA VarList
   21        | ParamDec

   22 ParamDec: Specifier VarDec

   23 CompSt: LC DefList StmtList RC
   24       | LC DefList StmtList error RC

   25 StmtList: Stmt StmtList
   26         | %empty

   27 Stmt: Exp SEMI
   28     | CompSt
   29     | RETURN Exp SEMI
   30     | IF LP Exp RP Stmt
   31     | IF LP Exp RP Stmt ELSE Stmt
   32     | WHILE LP Exp RP Stmt
   33     | RETURN Exp error SEMI
   34     | Exp error SEMI

   35 DefList: Def DefList
   36        | %empty

   37 Def: Specifier DecList SEMI
   38    | Specifier DecList error SEMI

   39 DecList: Dec
   40        | Dec COMMA DecList

   41 Dec: VarDec
   42    | VarDec ASSIGNOP Exp

   43 Exp: Exp ASSIGNOP Exp
   44    | Exp AND Exp
   45    | Exp OR Exp
   46    | Exp GREATER Exp
   47    | Exp LESS Exp
   48    | Exp GEQ Exp
   49    | Exp LEQ Exp
   50    | Exp EQL Exp
   51    | Exp NEQ Exp
   52    | Exp PLUS Exp
   53    | Exp MINUS Exp
   54    | Exp STAR Exp
   55    | Exp DIV Exp
   56    | LP Exp RP
   57    | MINUS Exp
   58    | NOT Exp
   59    | ID LP Args RP
   60    | ID LP RP
   61    | Exp LB Exp RB
   62    | Exp DOT ID
   63    | ID
   64    | INT
   65    | OCT
   66    | HEX
   67    | FLOAT
   68    | Exp LB Exp error RB

   69 Args: Exp COMMA Args
   70     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 24 33 34 38 68
    ASSIGNOP <node> (258) 42 43
    OR <node> (259) 45
    AND <node> (260) 44
    GREATER <node> (261) 46
    LESS <node> (262) 47
    GEQ <node> (263) 48
    LEQ <node> (264) 49
    EQL <node> (265) 50
    NEQ <node> (266) 51
    MINUS <node> (267) 53 57
    PLUS <node> (268) 52
    STAR <node> (269) 54
    DIV <node> (270) 55
    SOLO (271)
    NOT <node> (272) 58
    DOT <node> (273) 62
    LB <node> (274) 17 61 68
    RB <node> (275) 17 61 68
    LP <node> (276) 18 19 30 31 32 56 59 60
    RP <node> (277) 18 19 30 31 32 56 59 60
    LOWER_THAN_ELSE (278)
    ELSE <node> (279) 31
    INT <node> (280) 17 64
    OCT <node> (281) 65
    HEX <node> (282) 66
    FLOAT <node> (283) 67
    ID <node> (284) 13 15 16 18 19 59 60 62 63
    SEMI <node> (285) 4 5 27 29 33 34 37 38
    COMMA <node> (286) 8 20 40 69
    TYPE <node> (287) 9
    LC <node> (288) 11 23 24
    RC <node> (289) 11 23 24
    STRUCT <node> (290) 11 12
    RETURN <node> (291) 29 33
    IF <node> (292) 30 31
    WHILE <node> (293) 32


Nonterminals, with rules where they appear

    $accept (39)
        on left: 0
    Program <node> (40)
        on left: 1
        on right: 0
    ExtDefList <node> (41)
        on left: 2 3
        on right: 1 2
    ExtDef <node> (42)
        on left: 4 5 6
        on right: 2
    ExtDecList <node> (43)
        on left: 7 8
        on right: 4 8
    Specifier <node> (44)
        on left: 9 10
        on right: 4 5 6 22 37 38
    StructSpecifier <node> (45)
        on left: 11 12
        on right: 10
    OptTag <node> (46)
        on left: 13 14
        on right: 11
    Tag <node> (47)
        on left: 15
        on right: 12
    VarDec <node> (48)
        on left: 16 17
        on right: 7 8 17 22 41 42
    FunDec <node> (49)
        on left: 18 19
        on right: 6
    VarList <node> (50)
        on left: 20 21
        on right: 18 20
    ParamDec <node> (51)
        on left: 22
        on right: 20 21
    CompSt <node> (52)
        on left: 23 24
        on right: 6 28
    StmtList <node> (53)
        on left: 25 26
        on right: 23 24 25
    Stmt <node> (54)
        on left: 27 28 29 30 31 32 33 34
        on right: 25 30 31 32
    DefList <node> (55)
        on left: 35 36
        on right: 11 23 24 35
    Def <node> (56)
        on left: 37 38
        on right: 35
    DecList <node> (57)
        on left: 39 40
        on right: 37 38 40
    Dec <node> (58)
        on left: 41 42
        on right: 39 40
    Exp <node> (59)
        on left: 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68
        on right: 27 29 30 31 32 33 34 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 61 62 68 69 70
    Args <node> (60)
        on left: 69 70
        on right: 59 69


State 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 1

    9 Specifier: TYPE .

    $default  reduce using rule 9 (Specifier)


State 2

   11 StructSpecifier: STRUCT . OptTag LC DefList RC
   12                | STRUCT . Tag

    ID  shift, and go to state 8

    $default  reduce using rule 14 (OptTag)

    OptTag  go to state 9
    Tag     go to state 10


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 11


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    2 ExtDefList: ExtDef . ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 12
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt

    ID    shift, and go to state 13
    SEMI  shift, and go to state 14

    ExtDecList  go to state 15
    VarDec      go to state 16
    FunDec      go to state 17


State 7

   10 Specifier: StructSpecifier .

    $default  reduce using rule 10 (Specifier)


State 8

   13 OptTag: ID .
   15 Tag: ID .

    LC        reduce using rule 13 (OptTag)
    $default  reduce using rule 15 (Tag)


State 9

   11 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 18


State 10

   12 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 12 (StructSpecifier)


State 11

    0 $accept: Program $end .

    $default  accept


State 12

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 13

   16 VarDec: ID .
   18 FunDec: ID . LP VarList RP
   19       | ID . LP RP

    LP  shift, and go to state 19

    $default  reduce using rule 16 (VarDec)


State 14

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 15

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 20


State 16

    7 ExtDecList: VarDec .
    8           | VarDec . COMMA ExtDecList
   17 VarDec: VarDec . LB INT RB

    LB     shift, and go to state 21
    COMMA  shift, and go to state 22

    $default  reduce using rule 7 (ExtDecList)


State 17

    6 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 23

    CompSt  go to state 24


State 18

   11 StructSpecifier: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 36 (DefList)

    Specifier        go to state 25
    StructSpecifier  go to state 7
    DefList          go to state 26
    Def              go to state 27


State 19

   18 FunDec: ID LP . VarList RP
   19       | ID LP . RP

    RP      shift, and go to state 28
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 29
    StructSpecifier  go to state 7
    VarList          go to state 30
    ParamDec         go to state 31


State 20

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 21

   17 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 32


State 22

    8 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 33

    ExtDecList  go to state 34
    VarDec      go to state 16


State 23

   23 CompSt: LC . DefList StmtList RC
   24       | LC . DefList StmtList error RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 36 (DefList)

    Specifier        go to state 25
    StructSpecifier  go to state 7
    DefList          go to state 35
    Def              go to state 27


State 24

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 25

   37 Def: Specifier . DecList SEMI
   38    | Specifier . DecList error SEMI

    ID  shift, and go to state 33

    VarDec   go to state 36
    DecList  go to state 37
    Dec      go to state 38


State 26

   11 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 39


State 27

   35 DefList: Def . DefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 36 (DefList)

    Specifier        go to state 25
    StructSpecifier  go to state 7
    DefList          go to state 40
    Def              go to state 27


State 28

   19 FunDec: ID LP RP .

    $default  reduce using rule 19 (FunDec)


State 29

   22 ParamDec: Specifier . VarDec

    ID  shift, and go to state 33

    VarDec  go to state 41


State 30

   18 FunDec: ID LP VarList . RP

    RP  shift, and go to state 42


State 31

   20 VarList: ParamDec . COMMA VarList
   21        | ParamDec .

    COMMA  shift, and go to state 43

    $default  reduce using rule 21 (VarList)


State 32

   17 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 44


State 33

   16 VarDec: ID .

    $default  reduce using rule 16 (VarDec)


State 34

    8 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 8 (ExtDecList)


State 35

   23 CompSt: LC DefList . StmtList RC
   24       | LC DefList . StmtList error RC

    MINUS   shift, and go to state 45
    NOT     shift, and go to state 46
    LP      shift, and go to state 47
    INT     shift, and go to state 48
    OCT     shift, and go to state 49
    HEX     shift, and go to state 50
    FLOAT   shift, and go to state 51
    ID      shift, and go to state 52
    LC      shift, and go to state 23
    RETURN  shift, and go to state 53
    IF      shift, and go to state 54
    WHILE   shift, and go to state 55

    $default  reduce using rule 26 (StmtList)

    CompSt    go to state 56
    StmtList  go to state 57
    Stmt      go to state 58
    Exp       go to state 59


State 36

   17 VarDec: VarDec . LB INT RB
   41 Dec: VarDec .
   42    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 60
    LB        shift, and go to state 21

    $default  reduce using rule 41 (Dec)


State 37

   37 Def: Specifier DecList . SEMI
   38    | Specifier DecList . error SEMI

    error  shift, and go to state 61
    SEMI   shift, and go to state 62


State 38

   39 DecList: Dec .
   40        | Dec . COMMA DecList

    COMMA  shift, and go to state 63

    $default  reduce using rule 39 (DecList)


State 39

   11 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 11 (StructSpecifier)


State 40

   35 DefList: Def DefList .

    $default  reduce using rule 35 (DefList)


State 41

   17 VarDec: VarDec . LB INT RB
   22 ParamDec: Specifier VarDec .

    LB  shift, and go to state 21

    $default  reduce using rule 22 (ParamDec)


State 42

   18 FunDec: ID LP VarList RP .

    $default  reduce using rule 18 (FunDec)


State 43

   20 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 29
    StructSpecifier  go to state 7
    VarList          go to state 64
    ParamDec         go to state 31


State 44

   17 VarDec: VarDec LB INT RB .

    $default  reduce using rule 17 (VarDec)


State 45

   57 Exp: MINUS . Exp

    MINUS  shift, and go to state 45
    NOT    shift, and go to state 46
    LP     shift, and go to state 47
    INT    shift, and go to state 48
    OCT    shift, and go to state 49
    HEX    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52

    Exp  go to state 65


State 46

   58 Exp: NOT . Exp

    MINUS  shift, and go to state 45
    NOT    shift, and go to state 46
    LP     shift, and go to state 47
    INT    shift, and go to state 48
    OCT    shift, and go to state 49
    HEX    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52

    Exp  go to state 66


State 47

   56 Exp: LP . Exp RP

    MINUS  shift, and go to state 45
    NOT    shift, and go to state 46
    LP     shift, and go to state 47
    INT    shift, and go to state 48
    OCT    shift, and go to state 49
    HEX    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52

    Exp  go to state 67


State 48

   64 Exp: INT .

    $default  reduce using rule 64 (Exp)


State 49

   65 Exp: OCT .

    $default  reduce using rule 65 (Exp)


State 50

   66 Exp: HEX .

    $default  reduce using rule 66 (Exp)


State 51

   67 Exp: FLOAT .

    $default  reduce using rule 67 (Exp)


State 52

   59 Exp: ID . LP Args RP
   60    | ID . LP RP
   63    | ID .

    LP  shift, and go to state 68

    $default  reduce using rule 63 (Exp)


State 53

   29 Stmt: RETURN . Exp SEMI
   33     | RETURN . Exp error SEMI

    MINUS  shift, and go to state 45
    NOT    shift, and go to state 46
    LP     shift, and go to state 47
    INT    shift, and go to state 48
    OCT    shift, and go to state 49
    HEX    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52

    Exp  go to state 69


State 54

   30 Stmt: IF . LP Exp RP Stmt
   31     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 70


State 55

   32 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 71


State 56

   28 Stmt: CompSt .

    $default  reduce using rule 28 (Stmt)


State 57

   23 CompSt: LC DefList StmtList . RC
   24       | LC DefList StmtList . error RC

    error  shift, and go to state 72
    RC     shift, and go to state 73


State 58

   25 StmtList: Stmt . StmtList

    MINUS   shift, and go to state 45
    NOT     shift, and go to state 46
    LP      shift, and go to state 47
    INT     shift, and go to state 48
    OCT     shift, and go to state 49
    HEX     shift, and go to state 50
    FLOAT   shift, and go to state 51
    ID      shift, and go to state 52
    LC      shift, and go to state 23
    RETURN  shift, and go to state 53
    IF      shift, and go to state 54
    WHILE   shift, and go to state 55

    $default  reduce using rule 26 (StmtList)

    CompSt    go to state 56
    StmtList  go to state 74
    Stmt      go to state 58
    Exp       go to state 59


State 59

   27 Stmt: Exp . SEMI
   34     | Exp . error SEMI
   43 Exp: Exp . ASSIGNOP Exp
   44    | Exp . AND Exp
   45    | Exp . OR Exp
   46    | Exp . GREATER Exp
   47    | Exp . LESS Exp
   48    | Exp . GEQ Exp
   49    | Exp . LEQ Exp
   50    | Exp . EQL Exp
   51    | Exp . NEQ Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   61    | Exp . LB Exp RB
   62    | Exp . DOT ID
   68    | Exp . LB Exp error RB

    error     shift, and go to state 75
    ASSIGNOP  shift, and go to state 76
    OR        shift, and go to state 77
    AND       shift, and go to state 78
    GREATER   shift, and go to state 79
    LESS      shift, and go to state 80
    GEQ       shift, and go to state 81
    LEQ       shift, and go to state 82
    EQL       shift, and go to state 83
    NEQ       shift, and go to state 84
    MINUS     shift, and go to state 85
    PLUS      shift, and go to state 86
    STAR      shift, and go to state 87
    DIV       shift, and go to state 88
    DOT       shift, and go to state 89
    LB        shift, and go to state 90
    SEMI      shift, and go to state 91


State 60

   42 Dec: VarDec ASSIGNOP . Exp

    MINUS  shift, and go to state 45
    NOT    shift, and go to state 46
    LP     shift, and go to state 47
    INT    shift, and go to state 48
    OCT    shift, and go to state 49
    HEX    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52

    Exp  go to state 92


State 61

   38 Def: Specifier DecList error . SEMI

    SEMI  shift, and go to state 93


State 62

   37 Def: Specifier DecList SEMI .

    $default  reduce using rule 37 (Def)


State 63

   40 DecList: Dec COMMA . DecList

    ID  shift, and go to state 33

    VarDec   go to state 36
    DecList  go to state 94
    Dec      go to state 38


State 64

   20 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 20 (VarList)


State 65

   43 Exp: Exp . ASSIGNOP Exp
   44    | Exp . AND Exp
   45    | Exp . OR Exp
   46    | Exp . GREATER Exp
   47    | Exp . LESS Exp
   48    | Exp . GEQ Exp
   49    | Exp . LEQ Exp
   50    | Exp . EQL Exp
   51    | Exp . NEQ Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   57    | MINUS Exp .
   61    | Exp . LB Exp RB
   62    | Exp . DOT ID
   68    | Exp . LB Exp error RB

    DOT  shift, and go to state 89
    LB   shift, and go to state 90

    $default  reduce using rule 57 (Exp)


State 66

   43 Exp: Exp . ASSIGNOP Exp
   44    | Exp . AND Exp
   45    | Exp . OR Exp
   46    | Exp . GREATER Exp
   47    | Exp . LESS Exp
   48    | Exp . GEQ Exp
   49    | Exp . LEQ Exp
   50    | Exp . EQL Exp
   51    | Exp . NEQ Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   58    | NOT Exp .
   61    | Exp . LB Exp RB
   62    | Exp . DOT ID
   68    | Exp . LB Exp error RB

    DOT  shift, and go to state 89
    LB   shift, and go to state 90

    $default  reduce using rule 58 (Exp)


State 67

   43 Exp: Exp . ASSIGNOP Exp
   44    | Exp . AND Exp
   45    | Exp . OR Exp
   46    | Exp . GREATER Exp
   47    | Exp . LESS Exp
   48    | Exp . GEQ Exp
   49    | Exp . LEQ Exp
   50    | Exp . EQL Exp
   51    | Exp . NEQ Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   56    | LP Exp . RP
   61    | Exp . LB Exp RB
   62    | Exp . DOT ID
   68    | Exp . LB Exp error RB

    ASSIGNOP  shift, and go to state 76
    OR        shift, and go to state 77
    AND       shift, and go to state 78
    GREATER   shift, and go to state 79
    LESS      shift, and go to state 80
    GEQ       shift, and go to state 81
    LEQ       shift, and go to state 82
    EQL       shift, and go to state 83
    NEQ       shift, and go to state 84
    MINUS     shift, and go to state 85
    PLUS      shift, and go to state 86
    STAR      shift, and go to state 87
    DIV       shift, and go to state 88
    DOT       shift, and go to state 89
    LB        shift, and go to state 90
    RP        shift, and go to state 95


State 68

   59 Exp: ID LP . Args RP
   60    | ID LP . RP

    MINUS  shift, and go to state 45
    NOT    shift, and go to state 46
    LP     shift, and go to state 47
    RP     shift, and go to state 96
    INT    shift, and go to state 48
    OCT    shift, and go to state 49
    HEX    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52

    Exp   go to state 97
    Args  go to state 98


State 69

   29 Stmt: RETURN Exp . SEMI
   33     | RETURN Exp . error SEMI
   43 Exp: Exp . ASSIGNOP Exp
   44    | Exp . AND Exp
   45    | Exp . OR Exp
   46    | Exp . GREATER Exp
   47    | Exp . LESS Exp
   48    | Exp . GEQ Exp
   49    | Exp . LEQ Exp
   50    | Exp . EQL Exp
   51    | Exp . NEQ Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   61    | Exp . LB Exp RB
   62    | Exp . DOT ID
   68    | Exp . LB Exp error RB

    error     shift, and go to state 99
    ASSIGNOP  shift, and go to state 76
    OR        shift, and go to state 77
    AND       shift, and go to state 78
    GREATER   shift, and go to state 79
    LESS      shift, and go to state 80
    GEQ       shift, and go to state 81
    LEQ       shift, and go to state 82
    EQL       shift, and go to state 83
    NEQ       shift, and go to state 84
    MINUS     shift, and go to state 85
    PLUS      shift, and go to state 86
    STAR      shift, and go to state 87
    DIV       shift, and go to state 88
    DOT       shift, and go to state 89
    LB        shift, and go to state 90
    SEMI      shift, and go to state 100


State 70

   30 Stmt: IF LP . Exp RP Stmt
   31     | IF LP . Exp RP Stmt ELSE Stmt

    MINUS  shift, and go to state 45
    NOT    shift, and go to state 46
    LP     shift, and go to state 47
    INT    shift, and go to state 48
    OCT    shift, and go to state 49
    HEX    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52

    Exp  go to state 101


State 71

   32 Stmt: WHILE LP . Exp RP Stmt

    MINUS  shift, and go to state 45
    NOT    shift, and go to state 46
    LP     shift, and go to state 47
    INT    shift, and go to state 48
    OCT    shift, and go to state 49
    HEX    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52

    Exp  go to state 102


State 72

   24 CompSt: LC DefList StmtList error . RC

    RC  shift, and go to state 103


State 73

   23 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 23 (CompSt)


State 74

   25 StmtList: Stmt StmtList .

    $default  reduce using rule 25 (StmtList)


State 75

   34 Stmt: Exp error . SEMI

    SEMI  shift, and go to state 104


State 76

   43 Exp: Exp ASSIGNOP . Exp

    MINUS  shift, and go to state 45
    NOT    shift, and go to state 46
    LP     shift, and go to state 47
    INT    shift, and go to state 48
    OCT    shift, and go to state 49
    HEX    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52

    Exp  go to state 105


State 77

   45 Exp: Exp OR . Exp

    MINUS  shift, and go to state 45
    NOT    shift, and go to state 46
    LP     shift, and go to state 47
    INT    shift, and go to state 48
    OCT    shift, and go to state 49
    HEX    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52

    Exp  go to state 106


State 78

   44 Exp: Exp AND . Exp

    MINUS  shift, and go to state 45
    NOT    shift, and go to state 46
    LP     shift, and go to state 47
    INT    shift, and go to state 48
    OCT    shift, and go to state 49
    HEX    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52

    Exp  go to state 107


State 79

   46 Exp: Exp GREATER . Exp

    MINUS  shift, and go to state 45
    NOT    shift, and go to state 46
    LP     shift, and go to state 47
    INT    shift, and go to state 48
    OCT    shift, and go to state 49
    HEX    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52

    Exp  go to state 108


State 80

   47 Exp: Exp LESS . Exp

    MINUS  shift, and go to state 45
    NOT    shift, and go to state 46
    LP     shift, and go to state 47
    INT    shift, and go to state 48
    OCT    shift, and go to state 49
    HEX    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52

    Exp  go to state 109


State 81

   48 Exp: Exp GEQ . Exp
